# scooter-routing

./: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
src/: api.rs  graph.rs  main.rs  pbf.rs  profile.rs  routing.rs
static/: index.html  manifest.json  sw.js
