[package]
name = "scooter-routing"
version = "0.3.0"
edition = "2021"
description = "Routeur scooter & voiture sans permis — Rust + OSM"

[dependencies]
# OSM parsing
osmpbf = "0.3"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Spatial index + graph
rstar = "0.13"
petgraph = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Progress
indicatif = "0.17"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
